--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 #header {
-    background-color: rgb(21, 21, 95);
-    color: white;
-    text-align: center;
-}
+    background-color: rgb(21, 21, 95) !important;
+    color: white !important;
+    text-align: center !important;
