--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,98 @@
-#header {
-    background-color: rgb(21, 21, 95) !important;
-    color: white !important;
-    text-align: center !important;
+/* Reset some default styles */
+body,
+h1,
+h2,
+h3,
+p,
+button {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+body {
+  font-family: 'Arial', sans-serif;
+}
+
+/* Header styles */
+.weather-header {
+  background-color: #333;
+  color: #fff;
+}
+
+/* Search form styles */
+.form {
+  margin-top: 20px;
+}
+
+.weather-search {
+  width: 70%;
+}
+
+.search-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+/* Search history styles */
+.list-group {
+  margin-top: 20px;
+}
+
+.history-btn {
+  margin-bottom: 5px;
+}
+
+/* Today's weather styles */
+#today {
+  margin-top: 20px;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+
+/* Forecast styles */
+#forecast {
+  margin-top: 20px;
+}
+
+.five-day-card {
+  max-width: 150px;
+}
+
+/* General styling for cards */
+.card-title {
+  color: #fff;
+}
+
+.weather-img {
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+.bg-primary {
+  background-color: #007bff !important;
+}
+
+.text-white {
+  color: #fff !important;
+}
+
+/* Responsive styling for smaller screens */
+@media (max-width: 767px) {
+  .col-lg-3 {
+    order: 2;
+  }
+
+  .col-lg-9 {
+    order: 1;
+  }
+
+  .form {
+    margin-bottom: 20px;
+  }
+}
